--- a/DD53888CF.opf/index.yml
+++ b/DD53888CF.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   56db363e6fc54359890cc79bbab978c3:
     parts: {}
+    work_id: D4218
     span:
-    - vol: 98
+    - base: 8de8
       start: 0
       end: 110739
-    work_id: D4218
